[gd_scene load_steps=49 format=3 uid="uid://bnpc002lliwj8"]

[ext_resource type="Script" path="res://src/nodes/player/gd_player.gd" id="1_fb54i"]
[ext_resource type="Texture2D" uid="uid://cry7oqfadfjdh" path="res://src/data/sprites/cat-thing-sheet.png" id="2_twpry"]
[ext_resource type="Script" path="res://src/nodes/player/gd_player_sprite.gd" id="3_woagw"]
[ext_resource type="PackedScene" uid="uid://dg7bp26ohsr8v" path="res://scenes/tail.tscn" id="4_b6h0h"]
[ext_resource type="PackedScene" uid="uid://cs5064ukmtv0a" path="res://scenes/particles/smoke.tscn" id="5_w3daf"]
[ext_resource type="Script" path="res://src/nodes/classes/gd_hitbox.gd" id="6_stgsb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhfpm"]
size = Vector2(4, 15)

[sub_resource type="Animation" id="Animation_4nde0"]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_44k1e"]
resource_name = "Falling"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_5prkf"]
resource_name = "Idel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gu66j"]
resource_name = "JumpingBetween"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wmel4"]
resource_name = "JumpingUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7fhug"]
resource_name = "Landing"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hgdsh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0dxie"]
resource_name = "Walking"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbqe6"]
_data = {
"Dead": SubResource("Animation_4nde0"),
"Falling": SubResource("Animation_44k1e"),
"Idle": SubResource("Animation_5prkf"),
"JumpingBetween": SubResource("Animation_gu66j"),
"JumpingUp": SubResource("Animation_wmel4"),
"Landing": SubResource("Animation_7fhug"),
"RESET": SubResource("Animation_hgdsh"),
"Walking": SubResource("Animation_0dxie")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_exqqy"]
animation = &"Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r4jdc"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t72v8"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1hqyj"]
animation = &"JumpingBetween"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tm7w0"]
animation = &"JumpingUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vlbho"]
animation = &"Landing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sqx6m"]
animation = &"Walking"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_pxsxj"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_6emvk"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_sqx6m")
nodes/Animation/position = Vector2(53.3333, 106.667)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_pxsxj")
nodes/TimeScale/position = Vector2(320, 106.667)
nodes/output/position = Vector2(533.333, 106.667)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"Animation"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6yox0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rj6xq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8pern"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gb7kq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rii8k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pu3fk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ahwwa"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_br7lm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a1glh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nueo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_730ac"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1d0bb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w5nwj"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xv4x5"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yix3d"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tbgl4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7kvfp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r6oh0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_umg2f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j0syq"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_evg7l"]
states/Dead/node = SubResource("AnimationNodeAnimation_exqqy")
states/Dead/position = Vector2(321.955, 368.09)
states/End/position = Vector2(824, 36)
states/Falling/node = SubResource("AnimationNodeAnimation_r4jdc")
states/Falling/position = Vector2(911.654, 423.497)
states/Idle/node = SubResource("AnimationNodeAnimation_t72v8")
states/Idle/position = Vector2(173.259, 191.137)
states/JumpingBetween/node = SubResource("AnimationNodeAnimation_1hqyj")
states/JumpingBetween/position = Vector2(911.69, 322.766)
states/JumpingUp/node = SubResource("AnimationNodeAnimation_tm7w0")
states/JumpingUp/position = Vector2(802.148, 191.534)
states/Landing/node = SubResource("AnimationNodeAnimation_vlbho")
states/Landing/position = Vector2(803.003, 519.07)
states/Start/position = Vector2(66.6667, 310.658)
states/Walking/node = SubResource("AnimationNodeBlendTree_6emvk")
states/Walking/position = Vector2(174.642, 519.141)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_6yox0"), "Idle", "JumpingUp", SubResource("AnimationNodeStateMachineTransition_rj6xq"), "JumpingUp", "JumpingBetween", SubResource("AnimationNodeStateMachineTransition_8pern"), "JumpingUp", "Idle", SubResource("AnimationNodeStateMachineTransition_gb7kq"), "JumpingBetween", "Idle", SubResource("AnimationNodeStateMachineTransition_rii8k"), "Idle", "Falling", SubResource("AnimationNodeStateMachineTransition_pu3fk"), "JumpingBetween", "Falling", SubResource("AnimationNodeStateMachineTransition_ahwwa"), "Falling", "Dead", SubResource("AnimationNodeStateMachineTransition_br7lm"), "JumpingBetween", "Dead", SubResource("AnimationNodeStateMachineTransition_a1glh"), "JumpingUp", "Dead", SubResource("AnimationNodeStateMachineTransition_7nueo"), "Dead", "Idle", SubResource("AnimationNodeStateMachineTransition_730ac"), "Falling", "Landing", SubResource("AnimationNodeStateMachineTransition_1d0bb"), "Landing", "Idle", SubResource("AnimationNodeStateMachineTransition_w5nwj"), "Landing", "Walking", SubResource("AnimationNodeStateMachineTransition_xv4x5"), "Idle", "Walking", SubResource("AnimationNodeStateMachineTransition_yix3d"), "Walking", "Idle", SubResource("AnimationNodeStateMachineTransition_tbgl4"), "Walking", "JumpingUp", SubResource("AnimationNodeStateMachineTransition_7kvfp"), "Walking", "Dead", SubResource("AnimationNodeStateMachineTransition_r6oh0"), "Walking", "Falling", SubResource("AnimationNodeStateMachineTransition_umg2f"), "Landing", "JumpingUp", SubResource("AnimationNodeStateMachineTransition_j0syq")]
graph_offset = Vector2(0, 13.669)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_er34g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvd8a"]
size = Vector2(12, 4)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 21
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 3.14159
floor_snap_length = 2.0
script = ExtResource("1_fb54i")

[node name="Shape" type="CollisionShape2D" parent="."]
z_index = 1000
z_as_relative = false
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_mhfpm")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_twpry")
centered = false
offset = Vector2(-7, -21)
hframes = 6
vframes = 4
script = ExtResource("3_woagw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_qbqe6")
}

[node name="Tail" parent="Sprite" instance=ExtResource("4_b6h0h")]
position = Vector2(-1, -7)

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource("AnimationNodeStateMachine_evg7l")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_er34g")
parameters/Walking/TimeScale/scale = 1.0

[node name="Smoke" parent="." instance=ExtResource("5_w3daf")]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="BombUseTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("6_stgsb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_tvd8a")
debug_color = Color(0.992157, 0, 0.266667, 0.419608)
